Test what a path in an include or extends is relative to.

--- a/test/sites/main/layout_.jade
+++ b/test/sites/main/layout_.jade
@@ -1,9 +1,6 @@
 html
   head
-    if (typeof(title) === 'undefined')
-      title My Site
-    else
-      title #{title}
+    include title_
     block scripts
   body
     block content
